# JobPilot

./: .env.example  .gitignore  CLAUDE.md  PROJECT.md  TODOS.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 613787290ac0_baseline_schema.py
config/: companies.yaml  filters.yaml  roles.yaml  schedule.yaml
deploy/: README.md  jobpilot-bot.service  run-backup.sh  run-pipeline.sh
docs/designs/: jobpilot-post-send.md
jobpilot/: backup.py  bot.py  cli.py  config_edit.py  core.py  db.py  dedupe.py  digest.py  filters.py  gate.py  models.py  pipeline.py  telegram.py
jobpilot/adapters/: __init__.py  ashby.py  greenhouse.py  jobspy_search.py  lever.py
scripts/: check_slugs.sh
tests/: test_adapters.py  test_backup_gate.py  test_bot.py  test_config_edit.py  test_core.py  test_filters_digest.py  test_jobspy_search.py  test_pipeline.py
tests/fixtures/: ashby_board.json  greenhouse_board.json  lever_board.json
