[project]
name = "jobpilot"
version = "0.1.0"
description = "Personal job-application pipeline: ATS board diffing, Telegram digests, human-approved applications"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rapidfuzz>=3.9",
    "python-telegram-bot>=21.0",
    "python-jobspy>=1.1.80",
    "python-dotenv>=1.0",
    "ruamel-yaml>=0.19.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
jobpilot = "jobpilot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jobpilot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
